css/output.css
/* ... */
@media (min-width: 1280px) {

  .container {
    max-width: 1280px;
  }
}
@media (min-width: 1536px) {

  .container {
    max-width: 1536px;
  }
}
.sr-only {
  position: absolute !important;
  width: 1px !important;
  height: 1px !important;
  padding: 0 !important;
  margin: -1px !important;
  overflow: hidden !important;
  clip: rect(0, 0, 0, 0) !important;
  white-space: nowrap !important;
  border-width: 0 !important;
}
.pointer-events-none {
  pointer-events: none !important;
}
.visible {
  visibility: visible !important;
}
.invisible {
  visibility: hidden !important;
}
.collapse {
  visibility: collapse !important;
}
.static {
  position: static !important;
}
.fixed {
  position: fixed !important;
}
.absolute {
  position: absolute !important;
}
.relative {
  position: relative !important;
}
.sticky {
  position: sticky !important;
}
.inset-0 {
  inset: 0px !important;
}
.inset-x-0 {
  left: 0px !important;
  right: 0px !important;
}
.inset-y-0 {
  top: 0px !important;
  bottom: 0px !important;
}
.bottom-0 {
  bottom: 0px !important;
}
.bottom-10 {
  bottom: 2.5rem !important;
}
.bottom-4 {
  bottom: 1rem !important;
}
.bottom-\[60px\] {
  bottom: 60px !important;
}
.bottom-full {
  bottom: 100% !important;
}
.left-0 {
  left: 0px !important;
}
.left-1\/2 {
  left: 50% !important;
}
.left-\[69\%\] {
  left: 69% !important;
}
.right-0 {
  right: 0px !important;
}
.right-4 {
  right: 1rem !important;
}
.right-\[69\%\] {
  right: 69% !important;
}
.top-0 {
  top: 0px !important;
}
.top-16 {
  top: 4rem !important;
}
.top-\[270px\] {
  top: 270px !important;
}
.top-full {
  top: 100% !important;
}
.-z-10 {
  z-index: -10 !important;
}
.z-0 {
  z-index: 0 !important;
}
.z-10 {
  z-index: 10 !important;
}
.z-20 {
  z-index: 20 !important;
}
.z-30 {
  z-index: 30 !important;
}
.z-40 {
  z-index: 40 !important;
}
.z-50 {
  z-index: 50 !important;
}
.col-span-12 {
  grid-column: span 12 / span 12 !important;
}
.col-span-2 {
  grid-column: span 2 / span 2 !important;
}
.m-auto {
  margin: auto !important;
}
.mx-4 {
  margin-left: 1rem !important;
  margin-right: 1rem !important;
}
.mx-auto {
  margin-left: auto !important;
  margin-right: auto !important;
}
.my-2 {
  margin-top: 0.5rem !important;
  margin-bottom: 0.5rem !important;
}
.-ml-\[100\%\] {
  margin-left: -100% !important;
}
.-mr-\[100\%\] {
  margin-right: -100% !important;
}
.mb-1 {
  margin-bottom: 0.25rem !important;
}
.mb-2 {
  margin-bottom: 0.5rem !important;
}
.mb-4 {
  margin-bottom: 1rem !important;
}
.mb-6 {
  margin-bottom: 1.5rem !important;
}
.mb-8 {
  margin-bottom: 2rem !important;
}
.ml-2 {
  margin-left: 0.5rem !important;
}
.ml-auto {
  margin-left: auto !important;
}
.mt-0 {
  margin-top: 0px !important;
}
.mt-1 {
  margin-top: 0.25rem !important;
}
.mt-12 {
  margin-top: 3rem !important;
}
.mt-16 {
  margin-top: 4rem !important;
}
.mt-2 {
  margin-top: 0.5rem !important;
}
.mt-3 {
  margin-top: 0.75rem !important;
}
.mt-4 {
  margin-top: 1rem !important;
}
.mt-6 {
  margin-top: 1.5rem !important;
}
.mt-8 {
  margin-top: 2rem !important;
}
.block {
  display: block !important;
}
.inline-block {
  display: inline-block !important;
}
.inline {
  display: inline !important;
}
.flex {
  display: flex !important;
}
.inline-flex {
  display: inline-flex !important;
}
.table {
  display: table !important;
}
.grid {
  display: grid !important;
}
.hidden {
  display: none !important;
}
.aspect-\[4\/3\] {
  aspect-ratio: 4/3 !important;
}
.aspect-square {
  aspect-ratio: 1 / 1 !important;
}
.size-3\.5 {
  width: 0.875rem !important;
  height: 0.875rem !important;
}
.size-4 {
  width: 1rem !important;
  height: 1rem !important;
}
.size-5 {
  width: 1.25rem !important;
  height: 1.25rem !important;
}
.size-6 {
  width: 1.5rem !important;
  height: 1.5rem !important;
}
.size-8 {
  width: 2rem !important;
  height: 2rem !important;
}
.h-10 {
  height: 2.5rem !important;
}
.h-12 {
  height: 3rem !important;
}
.h-16 {
  height: 4rem !important;
}
.h-2 {
  height: 0.5rem !important;
}
.h-3\.5 {
  height: 0.875rem !important;
}
.h-32 {
  height: 8rem !important;
}
.h-4 {
  height: 1rem !important;
}
.h-40 {
  height: 10rem !important;
}
.h-56 {
  height: 14rem !important;
}
.h-6 {
  height: 1.5rem !important;
}
.h-8 {
  height: 2rem !important;
}
.h-80 {
  height: 20rem !important;
}
.h-9 {
  height: 2.25rem !important;
}
.h-\[120vh\] {
  height: 120vh !important;
}
.h-\[28px\] {
  height: 28px !important;
}
.h-\[32px\] {
  height: 32px !important;
}
.h-\[50\%\] {
  height: 50% !important;
}
.h-auto {
  height: auto !important;
}
.h-full {
  height: 100% !important;
}
.w-1\/2 {
  width: 50% !important;
}
.w-10 {
  width: 2.5rem !important;
}
.w-16 {
  width: 4rem !important;
}
.w-3\.5 {
  width: 0.875rem !important;
}
.w-32 {
  width: 8rem !important;
}
.w-4 {
  width: 1rem !important;
}
.w-48 {
  width: 12rem !important;
}
.w-6 {
  width: 1.5rem !important;
}
.w-64 {
  width: 16rem !important;
}
.w-8 {
  width: 2rem !important;
}
.w-9 {
  width: 2.25rem !important;
}
.w-\[28px\] {
  width: 28px !important;
}
.w-\[300px\] {
  width: 300px !important;
}
.w-\[32px\] {
  width: 32px !important;
}
.w-\[60\%\] {
  width: 60% !important;
}
.w-\[calc\(100\%-2rem\)\] {
  width: calc(100% - 2rem) !important;
}
.w-auto {
  width: auto !important;
}
.w-full {
  width: 100% !important;
}
.w-max {
  width: -moz-max-content !important;
  width: max-content !important;
}
.max-w-\[250px\] {
  max-width: 250px !important;
}
.max-w-\[300px\] {
  max-width: 300px !important;
}
.max-w-full {
  max-width: 100% !important;
}
.max-w-screen-xl {
  max-width: 1280px !important;
}
.flex-1 {
  flex: 1 1 0% !important;
}
.flex-shrink {
  flex-shrink: 1 !important;
}
.flex-shrink-0 {
  flex-shrink: 0 !important;
}
.shrink-0 {
  flex-shrink: 0 !important;
}
.flex-grow {
  flex-grow: 1 !important;
}
/* ... */

